# komment

./: .gitignore  README.md  index.html  justfile  komment-embed.js  sample.html
.github/workflows/: release.yml
doc/: CLOUDFLARE.md  DESIGN.md  HOW-TO-USE.md  SECURITY.md
public/: index.html  komment-embed.js
public/foo/: foo.html
public/pkg/: LICENSE-APACHE  komment.d.ts  komment.js  komment_bg.wasm  komment_bg.wasm.d.ts  package.json
src/: api.rs  config.rs  lib.rs  models.rs  render.rs
worker/: Cargo.toml  wrangler.toml
worker/src/: lib.rs
