[package]
name = "komment-worker"
version = "0.1.0"
edition = "2021"
authors = ["Seungjin Kim"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
